Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24878

Missing variables for external Tools

XMLWordPrintable

    • Windows
    • 7ac879a1336cb6d0783ab1c2884b6ba8b76d2ec3 (qt-creator/qt-creator/4.14)

      The variables for the external Tools have been renamed, but some are missing. I've used before:

      %{CurrentProject:Path}

      %{CurrentProject:BuildPath}

      %{CurrentBuild:Type}

      There's no replacement yet or I didn't found one.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            zerocom Stefan Sommerfeld
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes