ProjectExplorer: Add some global variables for the active project

Fixes: QTCREATORBUG-24878
Change-Id: I401300e72a546fa53a53b9b0098956a973f8de2e
Reviewed-by: Eike Ziller <eike.ziller@qt.io>